@@ -1,5 +1,5 @@
 //
-// "$Id: Enumerations.H,v 1.18.2.14.2.29 2002/10/29 19:45:08 easysw Exp $"
+// "$Id: Enumerations.H,v 1.18.2.14.2.30 2002/10/30 14:23:15 easysw Exp $"
 //
 // Enumerations for the Fast Light Tool Kit (FLTK).
 //
@@ -147,6 +147,12 @@ enum Fl_When { // Fl_Widget::when():
 #define FL_BUTTON3	0x04000000
 #define FL_BUTTONS	0x7f000000 // All possible buttons
 #define FL_BUTTON(n)	(0x00800000<<(n))
+
+#ifdef __APPLE__
+#  define FL_COMMAND	FL_META
+#else
+#  define FL_COMMAND	FL_CTRL
+#endif // __APPLE__
 
 enum Fl_Boxtype { // boxtypes (if you change these you must fix fl_boxtype.C):
   FL_NO_BOX = 0,	FL_FLAT_BOX,
@@ -408,5 +414,5 @@ enum Fl_Damage {
 #endif
 
 //
-// End of "$Id: Enumerations.H,v 1.18.2.14.2.29 2002/10/29 19:45:08 easysw Exp $".
+// End of "$Id: Enumerations.H,v 1.18.2.14.2.30 2002/10/30 14:23:15 easysw Exp $".
 //
