@@ -1,38 +1,54 @@
-<HTML><BODY>
+<HTML>
+<BODY>
+
 <!-- NEW PAGE -->
+
 <H2><A name=Fl_Tile>class Fl_Tile</A></H2>
+
 <HR>
+
 <H3>Class Hierarchy</H3>
-<UL>
-<PRE>
+
+<UL><PRE>
 <A href=Fl_Group.html#Fl_Group>Fl_Group</A>
    |
    +----<B>Fl_Tile</B>
-</PRE>
-</UL>
+</PRE></UL>
+
 <H3>Include Files</H3>
-<UL>
-<PRE>
+
+<UL><PRE>
 #include &lt;FL/Fl_Tile.H&gt;
-</PRE>
-</UL>
+</PRE></UL>
+
 <H3>Description</H3>
- The <TT>Fl_Tile</TT> class lets you resize the children by dragging
+
+<P>The <TT>Fl_Tile</TT> class lets you resize the children by dragging
 the border between them:
+
 <P ALIGN=CENTER><IMG src="Fl_Tile.gif" ALT="Fl_Tile widget."></P>
+
 <P><TT>Fl_Tile</TT> allows objects to be resized to zero dimensions.
- To prevent this you can use the <TT>resizable()</TT> to limit where
-corners can be dragged to. </P>
+To prevent this you can use the <TT>resizable()</TT> to limit where
+corners can be dragged to.</P>
+
 <P>Even though objects can be resized to zero sizes, they must
 initially have non-zero sizes so the <TT>Fl_Tile</TT> can figure out
-their layout.  If desired, call <TT>position()</TT> after creating the
+their layout. If desired, call <TT>position()</TT> after creating the
 children but before displaying the window to set the borders where you
-want. </P>
-<P>The &quot;borders&quot; are part of the children, an
- <TT>Fl_Tile</TT> does not
-draw any graphics of it's own.  In the above example all the final
-children have <TT>FL_DOWN_BOX</TT> types, and the &quot;ridges&quot; you see are
-two adjacent <TT>FL_DOWN_BOX</TT>'s drawn next to each other. </P>
+want.</P>
+
+<P>The &quot;borders&quot; are part of the children -
+<TT>Fl_Tile</TT> does not draw any graphics of its own. In the
+example above, all of the children have <TT>FL_DOWN_BOX</TT>
+types, and the &quot;ridges&quot; you see are actually two
+adjacent <TT>FL_DOWN_BOX</TT>'s drawn next to each other. All
+neighboring widgets share the same edge - the widget's thick
+borders make it appear as though the widgets aren't actually
+touching, but they are. If the edges of adjacent widgets do not
+touch, then it will be impossible to drag the corresponding
+edges.</P>
+
 <H3>Methods</H3>
 <UL>
 <LI><A href=#Fl_Tile.Fl_Tile>Fl_Tile</A></LI>
