@@ -127,10 +127,15 @@ FL_KEYBOARD</TT> and <TT>FL_SHORTCUT</TT> events:
 <LI><TT>FL_ALT</TT> - One of the alt keys is down. </LI>
 <LI><TT>FL_NUM_LOCK</TT> - The num lock is on. </LI>
 <LI><TT>FL_META</TT> - One of the meta/Windows keys is down. </LI>
+<LI><TT>FL_COMMAND</TT> - An alias for <TT>FL_CTRL</TT> on WIN32 and X11, or
+<TT>FL_META</TT> on MacOS X. </LI>
 <LI><TT>FL_SCROLL_LOCK</TT> - The scroll lock is on. </LI>
 <LI><TT>FL_BUTTON1</TT> - Mouse button 1 is pushed. </LI>
 <LI><TT>FL_BUTTON2</TT> - Mouse button 2 is pushed. </LI>
 <LI><TT>FL_BUTTON3</TT> - Mouse button 3 is pushed. </LI>
+<LI><TT>FL_BUTTONS</TT> - Any mouse button is pushed. </LI>
+<LI><TT>FL_BUTTON(n)</TT> - Mouse button N (N > 0) is pushed. </LI>
+
 </UL>
 <!-- NEED 4in -->
 <H2><a name=align>Alignment Values</A></H2>
